Replace MONGO_URI credentials with placeholders
Updated MONGO_URI in .env.example to use placeholders for username and password.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb+srv://khalidzaibi:hLEeZ6UNyzqkVUL9@inventory.5cfvpqm.mongodb.net/inventory
+MONGO_URI=mongodb+srv://<username>:<password>@inventory.5cfvpqm.mongodb.net/inventory
 JWT_SECRET=super_long_random_secret
 JWT_EXPIRES_IN=1d
 LOGIN_OTP_ENABLED=false
