Replace SMTP_USER and SMTP_PASSWORD placeholders
Updated SMTP credentials in the example environment file.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,8 +12,8 @@ MAIL_FROM="khalidzaibi1@gmail.com"
 # SMTP Configuration for Mailtrap (for testing purposes)
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
-SMTP_USER=695307e45478a5
-SMTP_PASSWORD=9b0b31f8b5c387
+SMTP_USER=<username>
+SMTP_PASSWORD=<password>
 SMTP_SECURE=false
 
 FILES_PUBLIC_ROOT=./src/public
